[gd_scene load_steps=4 format=3 uid="uid://ncu0nhv5eew4"]

[ext_resource type="Script" path="res://gun.gd" id="1_do1so"]
[ext_resource type="Texture2D" uid="uid://buje750uilh6t" path="res://Square.png" id="1_u60x1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4uny"]
size = Vector2(159.5, 160)

[node name="gun" type="Node2D"]
z_index = 10
script = ExtResource("1_do1so")

[node name="Square" type="Sprite2D" parent="."]
position = Vector2(300, 0)
scale = Vector2(10, 10)
texture = ExtResource("1_u60x1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(300.25, 0)
shape = SubResource("RectangleShape2D_t4uny")

[node name="reload_time" type="Timer" parent="."]
wait_time = 0.05

[node name="bulletPoint" type="Marker2D" parent="."]
position = Vector2(392.37, 0)

[connection signal="timeout" from="reload_time" to="." method="_on_reload_time_timeout"]
